--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li class="navbar-btn" id="edition-selector">
                             <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
-                                <span class="i18n" data-i18n-id="i18n_release">Release</span>:&nbsp;<span id="editionLabel">Int Edition 20170731</span> <span class="caret"></span>
+                                <span class="i18n" data-i18n-id="i18n_release">Release</span>:&nbsp;<span id="editionLabel">Tech Preview 1 20170731</span> <span class="caret"></span>
                             </button>
                             <!--<button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
                                 <span class="i18n" data-i18n-id="i18n_release">Release</span>:&nbsp;<span id="editionLabel">UK Edition 20161001</span> <span class="caret"></span>
@@ -917,8 +917,10 @@
                                         reloadCurrentPerspective();">UK Edition 20161001</a></li>-->
                                 <!--<li><a href="javascript:void(0);" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                         <!--reloadCurrentPerspective();">US Edition 20150901</a></li>-->
-                                <li><a href="javascript:void(0);" onclick="switchRelease('Int Edition 20170731', 'en-edition', 'v20170731', '900000000000509007', 'api/snomed');
-                                        reloadCurrentPerspective();">Int Edition 20170731</a></li>
+                                <li><a href="javascript:void(0);" onclick="switchRelease('Tech Preview 1 20170731', 'en-edition', 'v20170731', '900000000000509007', 'api/snomed');
+                                        reloadCurrentPerspective();">Tech Preview 1 20170731</a></li>
+                                <li><a href="javascript:void(0);" onclick="switchRelease('Tech Preview 2 20170731', 'en-edition', 'v20170831', '900000000000509007', 'api/snomed');
+                                        reloadCurrentPerspective();">Tech Preview 2 20170731</a></li>
                             </ul>
                         </li>
                         <li class="navbar-btn" id="perspective-selector">
@@ -978,7 +980,7 @@
                 <div class="jumbotron">
                     <h1>Drugs Model Technology Preview</h1>
                     <h2>Terminology Browser</h2>
-                    <p>This browser gives access to the Drugs Model.</p>
+                    <p>This browser gives access to the Products Model.</p>
                     <br><br><br><br>
                     <!--<p><span class="i18n" data-i18n-id="i18n_home1">The IHTSDO SNOMED CT Browser provides ways to browse and search SNOMED CT. The browser has been implemented as part of development within the IHTSDO Open Tooling Framework, by the IHTSDO and its development partners</span></p>-->
                     <!--<p><span class="i18n" data-i18n-id="i18n_home5">The Browser is provided by the IHTSDO to anyone for reference purposes. There are other tools developed by IHTSDO for Members for the use in health care settings. </span></p>-->
@@ -1019,9 +1021,13 @@
                         <!--<a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                 <!--switchLanguage('en_US', 'img/flags/us.png', true);-->
                                 <!--switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">United States edition</span></a>-->
-                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('Int Edition 20170731', 'en-edition', 'v20170731', '900000000000509007', '/api/snomed');
+                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('Tech Preview 1 20170731', 'en-edition', 'v20170731', '900000000000509007', '/api/snomed');
                                 switchLanguage('en', 'img/flags/us.png', true);
-                                switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Start browsing</span><br><span class="small">Int Edition 20170731</span></a>
+                                switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Start browsing</span><br><span class="small">Tech Preview 1 20170731</span></a>
+                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('Tech Preview 2 20170731', 'en-edition', 'v20170831', '900000000000509007', '/api/snomed');
+                                switchLanguage('en', 'img/flags/us.png', true);
+                                switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Start browsing</span><br><span class="small">Tech Preview 2 20170731</span></a>
+
                         <!--&nbsp;&nbsp;&nbsp;-->
                         <!--<a class="btn btn-primary btn-lg" role="button" href="stats/stats-viewer-1/index.html"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span>&nbsp;&nbsp;&nbsp;View CA English Extension<br>statistics and changes</a>-->
                         <!--&nbsp;&nbsp;&nbsp;-->
