--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 serverUrl: "api/snomed",
                 edition: "en-edition",
                 release: "v20170731",
-                releaseName: "International Edition 20170731",
+                releaseName: "Tech Preview 1 20170731",
                 showIds: false,
                 hideNotAcceptable: true,
                 displayInactiveDescriptions: false,
@@ -980,7 +980,7 @@
                 <div class="jumbotron">
                     <h1>Drugs Model Technology Preview</h1>
                     <h2>Terminology Browser</h2>
-                    <p>This browser gives access to the Products Model.</p>
+                    <p>This browser gives access to the Drugs Model.</p>
                     <br><br><br><br>
                     <!--<p><span class="i18n" data-i18n-id="i18n_home1">The IHTSDO SNOMED CT Browser provides ways to browse and search SNOMED CT. The browser has been implemented as part of development within the IHTSDO Open Tooling Framework, by the IHTSDO and its development partners</span></p>-->
                     <!--<p><span class="i18n" data-i18n-id="i18n_home5">The Browser is provided by the IHTSDO to anyone for reference purposes. There are other tools developed by IHTSDO for Members for the use in health care settings. </span></p>-->
