--- a/index.html
+++ b/index.html
@@ -921,6 +921,8 @@
                                         reloadCurrentPerspective();">Tech Preview 1 20170731</a></li>
                                 <li><a href="javascript:void(0);" onclick="switchRelease('Tech Preview 2 20170731', 'en-edition', 'v20170831', '900000000000509007', 'api/snomed');
                                         reloadCurrentPerspective();">Tech Preview 2 20170731</a></li>
+                                <li><a href="javascript:void(0);" onclick="switchRelease('Tech Preview 2.1 20170731', 'en-edition', 'v20170901', '900000000000509007', 'api/snomed');
+                                        reloadCurrentPerspective();">Tech Preview 2.1 20170731</a></li>
                             </ul>
                         </li>
                         <li class="navbar-btn" id="perspective-selector">
@@ -1027,6 +1029,9 @@
                         <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('Tech Preview 2 20170731', 'en-edition', 'v20170831', '900000000000509007', '/api/snomed');
                                 switchLanguage('en', 'img/flags/us.png', true);
                                 switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Start browsing</span><br><span class="small">Tech Preview 2 20170731</span></a>
+                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('Tech Preview 2.1 20170731', 'en-edition', 'v20170901', '900000000000509007', '/api/snomed');
+                                switchLanguage('en', 'img/flags/us.png', true);
+                                switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Start browsing</span><br><span class="small">Tech Preview 2.1 20170731</span></a>
 
                         <!--&nbsp;&nbsp;&nbsp;-->
                         <!--<a class="btn btn-primary btn-lg" role="button" href="stats/stats-viewer-1/index.html"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span>&nbsp;&nbsp;&nbsp;View CA English Extension<br>statistics and changes</a>-->
